# ECW-2023

./: README
challenge/: panel.tgz  readme_admin.txt  readme_challenger.txt
code/: .gitignore  make.sh
code/cnc/generate_fake_db/: Makefile  generate.sh  pyproject.toml
code/cnc/send_order/: Makefile  README  cnc  cnc.c  send.sh
code/cnc/server/: docker-compose.yml  site.conf
code/cnc/server/code/: generate.php  index.php
code/cnc/server/code/css/: PremierLeaguewithLionNumbers.css  custom.css
code/cnc/server/code/css/fonts/: PremierLeaguewithLionNumbers.eot
code/cnc/server/code/files/4LOAAaCW0/: 4LOAAaCW0.db
code/cnc/server/code/files/cNEykxUOn/: cNEykxUOn.db
code/cnc/server/code/includes/: cards.php  footer.html  header.html
code/cnc/server/code/js/: main.js
code/implant/: Makefile  README
code/implant/src/dga/: main.c
code/implant/src/implant/: abrt.c  dga.c  encrypt.c  implant.h  main.c  mbr.c  nuke.c  nyan.c  test.c
code/mbr/: .gitignore  Makefile  README  mbr.c
code/mbr/code/: io16.S  mbr.S  utils.S
image/: .gitignore  00-prepare.sh  50-boot.sh  60-push-files.sh  README  alpine-virt-3.15.0-x86_64.iso.sha512
misc/bootkit-master/: bootkit_i386.asm  mbr.asm
writeup/: .gitignore  writeup.md
